--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
-{deps, [{lasp, {git, "https://github.com/lasp-lang/lasp", {tag, "unstable"}}}]}.
+{deps, [lasp,
+        types]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
 {xref_checks, [undefined_function_calls]}.
@@ -9,6 +10,9 @@
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {edoc_opts, [{preprocess, true}]}.
+
+{shell, [{apps, [lasp_pg]},
+         {config, "config/sys.config"}]}.
 
 {profiles, [
     {lint,  [
