--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,7 @@
-{deps, [{lasp, {git, "https://github.com/lasp-lang/lasp", {tag, "master"}}}]}.
+{deps, [
+  {lasp, {git, "https://github.com/lasp-lang/lasp", {tag, "master"}}},
+  {partisan, {git, "https://github.com/lasp-lang/partisan", {tag, "master"}}}
+  ]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
 {xref_checks, [undefined_function_calls]}.
