--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
-  {lasp, {git, "https://github.com/lasp-lang/lasp", {tag, "master"}}},
-  {partisan, {git, "https://github.com/lasp-lang/partisan", {tag, "master"}}}
+  {lasp, {git, "https://github.com/lasp-lang/lasp", {branch, "master"}}},
+  {partisan, {git, "https://github.com/lasp-lang/partisan", {branch, "master"}}}
   ]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
