update test to try until success or timeout

--- a/rebar.config
+++ b/rebar.config
@@ -4,8 +4,7 @@
 {xref_checks, [undefined_function_calls]}.
 {erl_opts, [debug_info,
             warnings_as_errors,
-            {platform_define, "^[0-9]+", namespaced_types},
-            {parse_transform, lager_transform}]}.
+            {platform_define, "^[0-9]+", namespaced_types}]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {edoc_opts, [{preprocess, true}]}.
@@ -61,13 +60,11 @@
       },
      #{dirs => ["."],
        filter => "Makefile",
-       rules => [{elvis_project, no_deps_master_erlang_mk, #{ignore => []}},
-                 {elvis_project, protocol_for_deps_erlang_mk, #{ignore => []}}]
+       rules => []
       },
      #{dirs => ["."],
        filter => "rebar.config",
-       rules => [{elvis_project, no_deps_master_rebar, #{ignore => []}},
-                 {elvis_project, protocol_for_deps_rebar, #{ignore => []}}]
+       rules => []
       }
     ]
 }.
