--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{deps, [{lasp, {git, "https://github.com/lasp-lang/lasp", {branch, "master"}}}]}.
+{deps, [{lasp, "~>0.4"}]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
 {xref_checks, [undefined_function_calls]}.
