compiling on OTP 24

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
-{deps, [{lasp, "~>0.4"}]}.
+{deps, [
+  {lasp, {git, "https://github.com/Inkwell-Data/lasp.git", {branch, "no_lager"}}}
+]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
 {xref_checks, [undefined_function_calls]}.
